infra/timeweb/10-gitops/apps/ory/kratos/kratos.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos
  namespace: secure
  annotations:
    argocd.argoproj.io/sync-wave: "60"
spec:
  type: ClusterIP
  ports:
    - name: public
      port: 4433
      targetPort: public
      protocol: TCP
    - name: admin
      port: 4434
      targetPort: admin
      protocol: TCP
  selector:
    app: kratos
